--- a/MovieApp/Base.lproj/Main.storyboard
+++ b/MovieApp/Base.lproj/Main.storyboard
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="IOU-d2-x7I">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="8Pn-e0-2f0">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -19,30 +19,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JLM-MB-mzp">
-                            <size key="itemSize" width="151" height="149"/>
+                            <size key="itemSize" width="179" height="149"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="eyE-7O-T1V">
-                                <rect key="frame" x="0.0" y="0.0" width="151" height="149"/>
+                                <rect key="frame" x="0.0" y="0.0" width="179" height="149"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="151" height="149"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="179" height="149"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EmptyHeart.png" translatesAutoresizingMaskIntoConstraints="NO" id="LZf-i8-LGt">
-                                            <rect key="frame" x="10" y="18" width="159" height="140"/>
+                                        <imageView userInteractionEnabled="NO" tag="1" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="EmptyHeart.png" translatesAutoresizingMaskIntoConstraints="NO" id="LZf-i8-LGt">
+                                            <rect key="frame" x="0.0" y="0.0" width="151" height="158"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
                                     </subviews>
                                 </view>
-                                <constraints>
-                                    <constraint firstAttribute="trailingMargin" secondItem="LZf-i8-LGt" secondAttribute="trailing" constant="-26" id="A25-ox-Kju"/>
-                                    <constraint firstItem="LZf-i8-LGt" firstAttribute="top" secondItem="eyE-7O-T1V" secondAttribute="topMargin" constant="10" id="HIl-i0-Xmc"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="LZf-i8-LGt" secondAttribute="bottom" constant="-17" id="hne-sq-K82"/>
-                                    <constraint firstItem="LZf-i8-LGt" firstAttribute="leading" secondItem="eyE-7O-T1V" secondAttribute="leadingMargin" constant="2" id="oTI-7s-IAd"/>
-                                </constraints>
                             </collectionViewCell>
                         </cells>
                         <connections>
@@ -142,7 +137,7 @@
                                         <rect key="frame" x="0.0" y="86" width="375" height="581"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="d4a-pe-lr5" id="Zia-sp-uV7">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="580"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="581"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0Xp-kg-bPr">
@@ -174,7 +169,7 @@
                                                     <rect key="frame" x="27" y="252" width="317" height="169"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
+                                                    <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                 </textView>
@@ -256,7 +251,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="91"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yId-R6-z3T" id="Iff-Uv-mZx">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="91"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <button opaque="NO" tag="1" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dFB-AW-QZw">
@@ -298,7 +293,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="228"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="bnb-Aa-Ngn" id="ax1-ML-ueb">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="227"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="228"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Author :" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Y3E-jN-jyA">
@@ -341,7 +336,7 @@
         <scene sceneID="9s4-05-HJt">
             <objects>
                 <collectionViewController id="YA2-A3-2jg" customClass="Favorite" customModule="MovieApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="xbO-8q-OAG">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="xbO-8q-OAG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -435,6 +430,54 @@
             </objects>
             <point key="canvasLocation" x="696.79999999999995" y="599.55022488755628"/>
         </scene>
+        <!--Splash Screen View Controller-->
+        <scene sceneID="3fU-cl-UaZ">
+            <objects>
+                <viewController id="8Pn-e0-2f0" customClass="SplashScreenViewController" customModule="MovieApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FoA-Pv-Ztx"/>
+                        <viewControllerLayoutGuide type="bottom" id="3yv-ts-Qk8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Cmr-Io-Z6K">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="filmReel.png" translatesAutoresizingMaskIntoConstraints="NO" id="P6b-8A-9sE">
+                                <rect key="frame" x="93" y="239" width="189" height="189"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="189" id="E8z-ul-b7c"/>
+                                    <constraint firstAttribute="width" secondItem="P6b-8A-9sE" secondAttribute="height" multiplier="1:1" id="Nd0-Qe-pZI"/>
+                                    <constraint firstAttribute="width" constant="189" id="liT-5z-WiC"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Movie App" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="mhl-ze-I8z">
+                                <rect key="frame" x="103" y="446" width="169" height="35"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="169" id="uUX-Zv-Au0"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="P6b-8A-9sE" firstAttribute="centerY" secondItem="Cmr-Io-Z6K" secondAttribute="centerY" id="MAe-7K-0YA"/>
+                            <constraint firstItem="3yv-ts-Qk8" firstAttribute="top" secondItem="mhl-ze-I8z" secondAttribute="bottom" constant="186" id="Psh-gd-R7z"/>
+                            <constraint firstItem="P6b-8A-9sE" firstAttribute="centerX" secondItem="mhl-ze-I8z" secondAttribute="centerX" id="aaD-o6-IbB"/>
+                            <constraint firstItem="mhl-ze-I8z" firstAttribute="top" secondItem="P6b-8A-9sE" secondAttribute="bottom" constant="18" id="gdV-1N-Y9q"/>
+                            <constraint firstItem="P6b-8A-9sE" firstAttribute="centerX" secondItem="Cmr-Io-Z6K" secondAttribute="centerX" id="wpY-G8-sbD"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="image" destination="P6b-8A-9sE" id="0mA-SM-iTD"/>
+                        <segue destination="IOU-d2-x7I" kind="show" identifier="showSplashScreen" id="UgH-9J-0JN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cvS-gS-j2P" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1118" y="-134"/>
+        </scene>
     </scenes>
     <resources>
         <image name="EmptyHeart.png" width="231" height="218"/>
@@ -442,6 +485,7 @@
         <image name="dot-more-7.png" width="30" height="30"/>
         <image name="film-clap-board.png" width="29" height="30"/>
         <image name="film.png" width="500" height="500"/>
+        <image name="filmReel.png" width="885" height="890"/>
         <image name="heart-7.png" width="30" height="30"/>
         <image name="play.png" width="57" height="57"/>
     </resources>
